--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
 
         <activity android:name="com.example.myapplication.topdrawer.TopDrawerTestActivity" android:configChanges="keyboard|orientation" android:windowSoftInputMode="adjustResize" android:theme="@style/AppTheme"/>
+        <activity android:name="com.example.myapplication.circleslider.CircleSelectorTestActivity" android:configChanges="keyboard|orientation" android:windowSoftInputMode="adjustResize" android:theme="@style/AppTheme"/>
 
     </application>
 
