--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,9 @@ dependencies {
 
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.18'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
 
 }
